all stretch goals - reDo:targeted #history then specified class in 2nd argument <"click", "#redo", redo>

--- a/server/public/scripts/style.css
+++ b/server/public/scripts/style.css
@@ -31,4 +31,16 @@ button {
 
 li {
   list-style-type:upper-roman;
+  padding: .2em;
+  margin-left: .5em;
+}
+
+.reDo {
+  width:fit-content;
+  height:fit-content;
+  background-color: whitesmoke;
+}
+
+.reDo:active {
+  background-color: gray;
 }
